@@ -1,3 +1,9 @@
+TAG: targetedalleleload-6-0-7-1
+DATE: 01/05/2017
+STAFF: lec 
+CHANGES:
+1) TR12069/obsolete db.setAutoTranslate()
+
 TAG: targetedalleleload-6-0-5-2
 TAG: targetedalleleload-6-0-5-1
 DATE: 08/11/2016
